--- a/style.css
+++ b/style.css
@@ -1,46 +1,22 @@
-.header{
-    height:200px;
-    width:auto;
-    border: 1px solid black;
+body{
     background-color: blanchedalmond;
 }
-.header img{
-    
-    height: 175px;
-    width: 200px;
-    margin-top: 10px;
-    float: left;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    
-}
-.header h1{
-    margin-top:37px;
-    margin-left:700px ;
-}
-.main{
-    margin-top: 2px;
-    height:400px;
-    width: auto;
-    border: 1px solid black;
-    background-color: coral;
-    
-}
-.sites{
-    height: 400px;
-    width: 100px;
-    margin-top: 10px;
-    float: left;
-    margin-left: 250px;
-    margin-bottom: 10px;
-    
-
+table.row1 td{
+    padding:0px 450px 0px 20px;
 
 }
-.main .links{
-    margin-top: 25px;
-    margin-left: 500px;
-    
+table.row2{
+    margin-left: auto;
+    margin-right: auto;
 }
-    
+table.row2 .list{
+    list-style: none;
+    margin-right: 20px;
+}
+table.row2 tr td ul li{
+    padding-bottom: 10px;
+}
+table.row2 .link1 {
+    padding-bottom: 10px;
+}
 
